--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asgiref==3.8.1
 babel==2.16.0
 certifi==2024.8.30
 cffi==1.17.1
+channels==4.2.0
 charset-normalizer==3.4.0
 click==8.1.7
 cloudinary==1.41.0
@@ -32,6 +33,7 @@ requests==2.32.3
 setuptools==75.6.0
 six==1.16.0
 sqlparse==0.5.2
+stripe==11.3.0
 tomlkit==0.13.2
 typing_extensions==4.12.2
 tzdata==2024.2
