--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ aerich==0.7.2
 aiosqlite==0.17.0
 annotated-types==0.7.0
 asgiref==3.8.1
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
 babel==2.16.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -10,7 +13,9 @@ charset-normalizer==3.4.0
 click==8.1.7
 cloudinary==1.41.0
 colorama==0.4.6
+constantly==23.10.4
 cryptography==44.0.0
+daphne==4.1.2
 dictdiffer==0.9.0
 Django==5.1.3
 django-allauth==65.2.0
@@ -19,22 +24,32 @@ django-countries==7.6.1
 django-money==3.5.3
 django-tortoise==0.0.1
 djangorestframework==3.15.2
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
 iso8601==1.1.0
 py-moneyed==3.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 PyJWT==2.10.0
+pyOpenSSL==24.3.0
 pypika-tortoise==0.1.6
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+service-identity==24.2.0
 setuptools==75.6.0
 six==1.16.0
 sqlparse==0.5.2
 stripe==11.3.0
 tomlkit==0.13.2
+tortoise-orm==0.19.1
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+zope.interface==7.2
